load(
    "@rules_proto//proto:defs.bzl", 
    "proto_library",
)

load(
    "@rules_proto_grpc//csharp:defs.bzl", 
    "csharp_proto_compile",
    "csharp_grpc_compile",
)

load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

proto_library(
    name = "protos",
    visibility = ["//visibility:public"],
    srcs = [":test.proto"],
)

csharp_proto_compile(
    name = "csharp_protos",
    protos = [
        ":protos",
    ],
)

csharp_grpc_compile(
    name = "csharp_proto_grpc",
    protos = [
        ":protos",
    ],
)

csharp_library(
    name = "lib",
    srcs = [":csharp_proto_grpc"],
    private_deps = [
        "@main//netstandard.library",
        "@main//system.buffers",
        "@main//system.memory",
    ],
    target_frameworks = ["netstandard2.0"],
    deps = [
        "@main//google.protobuf",
        "@main//grpc.core",
        "@main//grpc.core.api",
    ],
)
