load(
    "@rules_proto//proto:defs.bzl", 
    "proto_library",
)

load(
    "@rules_proto_grpc//csharp:defs.bzl", 
    "csharp_grpc_compile",
)

load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_library",
)

proto_library(
    name = "protos",
    visibility = ["//visibility:public"],
    srcs = [":test.proto"],
)

csharp_grpc_compile(
    name = "csharp_proto_grpc",
    options = {
        "*": ["internal_access"],
    },
    protos = [
        ":protos",
    ],
)

csharp_library(
    name = "lib",
    srcs = [":csharp_proto_grpc"],
    private_deps = [
        "@main//netstandard.library",
    ],
    target_frameworks = ["netstandard2.0"],
    deps = [
        "@main//system.memory",
        "@main//google.protobuf",
        "@main//grpc.core.api",
        "@main//grpc.net.client",
    ],
)
